# supakube

./: .releaserc.json  CONTRIBUTING.md  Dockerfile  Earthfile  Justfile  README.md  deployment.yaml  skaffold.yaml
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json  docker-compose.yml  supakube  supakube.yaml
.github/workflows/: ci.yml  update-version.sh
crates/hot-reload/: Cargo.toml
crates/hot-reload/src/: main.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: main.rs
crates/static-website/: Cargo.toml  input.css  package-lock.json  tailwind.config.js
crates/static-website/content/docs/guides/installation/: index.md
crates/static-website/src/: blog_summary.rs  docs_summary.rs  generator.rs  main.rs  markdown.rs  pages.rs
crates/static-website/src/components/: benefits.rs  customer_logos.rs  enterprise.rs  faq_accordian.rs  features.rs  footer.rs  home_page.rs  image_hero.rs  marketing.rs  mod.rs  navigation.rs  partners.rs  problem_solution.rs  river.rs  security.rs  small_image_feature.rs  team.rs  testamonials.rs  video_hero.rs
crates/static-website/src/layouts/: blog.rs  docs.rs  layout.rs  pages.rs
crates/static-website/src/pages/: contact.rs  enterprise.rs  home.rs  partners.rs  pricing.rs
crates/supakube/: Cargo.toml
crates/supakube/config/: postgres-service.yaml
crates/supakube/src/: application.rs  database.rs  install.rs  install_operators.rs  keycloak.rs  keycloak_db.rs  main.rs  oauth2_proxy.rs  operator.rs  services.rs
crates/supakube/src/operator/: crd.rs  finalizer.rs  operators.rs  reconcile.rs
crates/supakube/src/services/: application.rs  database.rs  deployment.rs  keycloak.rs  keycloak_db.rs  nginx.rs  oauth2_proxy.rs  selenium.rs
crates/web-assets/: Cargo.toml  build.rs  input.css  tailwind.config.js
crates/web-csr/: Cargo.toml
crates/web-csr/src/: counter.rs  lib.rs
crates/web-pages/: Cargo.toml  base_layout.rs  layout.rs  lib.rs  root.rs
crates/web-pages/src/: layout.rs  root.rs
crates/web-server/: Cargo.toml  main.rs  root.rs  static_files.rs
crates/web-server/src/: main.rs  root.rs
remix-demo/: README.md  package-lock.json  package.json
