[package]
name = "hot-reload"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version="0", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
jsonwebtoken = "9.3.0"
