[package]
name = "supakube"
version = "1.0.7"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 

# Kubernetes in Rust
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.96.0", features = ["runtime", "derive"] }

# For the CLI
clap = { version = "4.5", features = ["derive"] }

# Custom Error definitions and convenient error mappings
thiserror = "2" 
anyhow = "1"

serde = "1"
serde_json = "1"
serde_yaml = "0"
schemars = "0.8.21"

tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["env-filter"] }

# So we can create secrets
uuid = { version="1", features = ["v4"] }
url = "2"
getrandom = "0.2.15"
base64 = "0.22.1"
