[package]
name = "web-pages"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
assets = { path = "../web-assets" }
axum = { version = "0.7", default-features = false }
axum-extra = { version = "0.9", features = ["form"] }
dioxus = { version = "0.6", default-features = false, features = ["macro", "html", "signals"] }
dioxus-ssr = { version = "0.6", default-features = false }
daisy_rsx = "0.1.12"
serde = "1"