[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-server" # Replace with your project's name
path = "main.rs"

[dependencies]
web-pages = { path = "../web-pages" }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }